[tool.poetry]
name = "diffusion-tutorial"
version = "0.0.0"
description = ""
authors = ["Dimitris Zermas <dzermas@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10, < 3.11"
boto3 = "^1.26.118"
tqdm = "^4.65.0"
typer = "^0.7.0"
rich = "^13.3.4"
urllib3="<2"
torch = "=1.13.1"
torchvision = "=0.14.1"
torchmetrics = "=0.11.4"

[tool.poetry.dev-dependencies]
pytest = "*"
pre_commit = "*"
mypy = "*"

[tool.isort]
line_length = 88
multi_line_output = 3
include_trailing_comma = true
known_third_party = ["aws_utils", "hydra", "hydra_zen", "metaflow", "mlflow", "omegaconf", "pytorch_lightning", "torch", "torchvision"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
